<resources>
    <string name="app_name">jgj891_lab5</string>
    <string name="footer_text">SELECT A ZONE TO CONTINUE</string>
    <string name="btn_x">X</string>
    <string name="btn_g">G</string>
    <string name="btn_b">B</string>
    <string name="btn_d">D</string>
    <string name="btn_r">R</string>
    <string name="btn_tr">TR</string>
    <string name="btn_ty">TY</string>
    <string name="zone_page">Zone Page</string>
    <string name="relocate_title">RELOCATE A DINOSAUR</string>
    <string name="dino_name">Dinosaur name: </string>
    <string name="new_zone">New zone: </string>
    <string name="relocate_btn">Relocate</string>
    <string name="park_map_btn">Park Map</string>
    <string name="num_guests"># of guests: </string>
    <string name="num_dino"># of dinosaurs: </string>
    <string name="relocate_a_dino_btn">RELOCATE A DINOSAUR</string>
    <string name="human_count">Number of guests %s</string>
    <string name="dino_count">Number of dinosaurs %s</string>
    <string name="zone_name">ZONE %s</string>
    <string name="dinoName1">%s</string>
    <string name="dinoInfo1">%s,%s</string>
    <string name="dinoName2">%s</string>
    <string name="dinoInfo2">%s,%s</string>
    <string name="dinoName3">%s</string>
    <string name="dinoInfo3">%s,%s</string>
    <string name="dinoName4">%s</string>
    <string name="dinoInfo4">%s,%s</string>
    <string name="dinoName5">%s</string>
    <string name="dinoInfo5">%s,%s</string>
    <string name="dinoName6">%s</string>
    <string name="dinoInfo6">%s,%s</string>
    <string name="dinoName7">%s</string>
    <string name="dinoInfo7">%s,%s</string>
    <string name="dinoName8">%s</string>
    <string name="dinoInfo8">%s,%s</string>
    <string name="dinoName9">%s</string>
    <string name="dinoInfo9">%s,%s</string>
    <string name="dinoName10">%s</string>
    <string name="dinoInfo10">%s,%s</string>
    <string name="content_desc">Content Description</string>
</resources>