<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.utsa.cs3443.jgj891_lab5.ZoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="167dp"
            android:layout_height="140dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001"
            android:contentDescription="@string/content_desc" />

        <TextView
            android:id="@+id/zone_name"
            android:layout_width="218dp"
            android:layout_height="105dp"
            android:text="@string/zone_name"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025" />
        </LinearLayout>

        <TextView
            android:id="@+id/num_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_guests"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252" />

        <TextView
            android:id="@+id/num_dino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_dino"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <Button
            android:id="@+id/relocate_a_dino_btn"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:text="@string/relocate_a_dino_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName1"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo1"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image2"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName2"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo2"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image3"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName3"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo3"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image4"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName4"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo4"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image5"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName5"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo5"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image6"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName6"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo6"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image7"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName7"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo7"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image8"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName8"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo8"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image9"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName9"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo9"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">
            <ImageView
                android:id="@+id/image10"
                android:layout_width="114dp"
                android:layout_height="115dp"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/alice" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dinoName10"
                    android:layout_width="295dp"
                    android:layout_height="65dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="40sp"
                    android:text="some"/>

                <TextView
                    android:id="@+id/dinoInfo10"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"
                    android:text="test"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>